--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,5 +56,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "Unity3D-Package.sln"
+    "dotnet.defaultSolution": "Unity3D-Packages.sln"
 }
